--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,11 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@mipmap/content"
         tools:context=".MainActivity">
 
-    <com.ting.canvasstudy.SplashView android:layout_width="match_parent" android:layout_height="match_parent"/>
+    <com.ting.canvasstudy.SplashView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
